<resources>
  <string name="textImagesCacheCleared">Images cache has been cleared.</string>
  <string name="textSettings">Settings</string>
  <string name="textSettingsGeneral">General &amp; UX</string>
  <string name="textSettingsRecentShowsTitle">Recently Added Amount</string>
  <string name="textSettingsRecentShowsSummary">Number of recent items to display in \'Collection\'.</string>
  <string name="textSettingsUpcomingSectionTitle">Upcoming Section</string>
  <string name="textSettingsUpcomingSectionSummary">Enable/disable \'Upcoming\' section in \'Progress\' tab.</string>
  <string name="textSettingsThemeTitle">Theme</string>
  <string name="textSettingsThemeSummary">Select main theme.</string>
  <string name="textSettingsMyShowsCountryTitle">Region</string>
  <string name="textSettingsMyShowsCountrySummary">Select region to use with streaming services data.</string>
  <string name="textSettingsMyShowsLanguageTitle">Language</string>
  <string name="textSettingsMyShowsLanguageSummary">Descriptions and titles will be translated when available. App will restart.</string>
  <string name="textSettingsDateFormatTitle">Date / Time Format</string>
  <string name="textSettingsIncludeSpecialsTitle">Special Seasons</string>
  <string name="textSettingsIncludeSpecialsSummary">Display \'Special\' seasons in show\'s details screen.</string>
  <string name="textSettingsNotifications">Notifications</string>
  <string name="textSettingsPushNotificationsTitle">Push Notifications</string>
  <string name="textSettingsShowsNotificationsSummary">Receive notifications about new movies, episodes, seasons for shows you are following.</string>
  <string name="textSettingsShowsNotificationsRationale">Please grant the application a permission to display notifications.\n\nWould you like to do it now?</string>
  <string name="textSettingsMisc">Misc</string>
  <string name="textSettingsContactDevsTitle">Contact Developers</string>
  <string name="textSettingsContactDevsSummary">Got an issue or feedback? Open an issue on GitHub.</string>
  <string name="textSettingsDeleteCacheTitle">Clear Images Cache</string>
  <string name="textSettingsDeleteCacheSummary">Click to clear local images cache. This may help if shows images are not being loaded correctly.</string>
  <string name="textSettingsMoviesEnabledTitle">Movies</string>
  <string name="textSettingsMoviesEnabledSummary">Enable/disable movies support. App will restart.</string>
  <string name="textSettingsWidgets">Widgets</string>
  <string name="textSettingsWidgetsLabelsTitle">Titles</string>
  <string name="textSettingsWidgetsLabelsSummary">Display translucent widgets titles.</string>
  <string name="textSettingsStreamingsDisclaimer">Streaming services data is provided by</string>
  <string name="textSettingsStreamingServicesTitle">Streaming Services</string>
  <string name="textSettingsStreamingServicesMessage">Display streaming services data.</string>
  <string name="textSettingsProgressNextEpisodeTitle">Next Episode</string>
  <string name="textSettingsProgressNextEpisodeMessage">Calculate next episode using:</string>
  <string name="textSettingsDateSelectionMessage">Select default date selection option.</string>
  <string name="textSettingsTabletColumnsTitle">Lists Columns Number</string>
  <string name="textSettingsTabletColumnsSummary">Select preferred columns number for lists.</string>
  <string name="textSettingsBackup">Backup &amp; Restore</string>
  <string name="textSettingsBackupExportTitle">Export</string>
  <string name="textSettingsBackupExportDescription">Export your data to create a backup or transfer it to new device.</string>
  <string name="textSettingsBackupImportTitle">Import</string>
  <string name="textSettingsBackupImportDescription">Import your backup file to restore data on this device.</string>
  <string name="textSettingsSpoilers">Spoilers</string>
  <string name="textSettingsSpoilersShows">Shows</string>
  <string name="textSettingsSpoilersShowsSummary">Manage spoiler settings for shows.</string>
  <string name="textSettingsSpoilersShowsOverviewsMyTitle">My Shows</string>
  <string name="textSettingsSpoilersShowsOverviewsMyDescription">Hide <b>description</b> of shows added to My Shows</string>
  <string name="textSettingsSpoilersShowsRatingsMyDescription">Hide <b>rating</b> of shows added to My Shows</string>
  <string name="textSettingsSpoilersShowsOverviewsWatchlistTitle">Watchlist</string>
  <string name="textSettingsSpoilersShowsOverviewsWatchlistDescription">Hide <b>description</b> of shows added to Watchlist</string>
  <string name="textSettingsSpoilersShowsRatingsWatchlistDescription">Hide <b>rating</b> of shows added to Watchlist</string>
  <string name="textSettingsSpoilersShowsOverviewsHiddenTitle">Hidden</string>
  <string name="textSettingsSpoilersShowsOverviewsHiddenDescription">Hide <b>description</b> of shows added to Hidden</string>
  <string name="textSettingsSpoilersShowsRatingsHiddenDescription">Hide <b>rating</b> of shows added to Hidden</string>
  <string name="textSettingsSpoilersShowsOverviewsNotCollectedTitle">Not Collected</string>
  <string name="textSettingsSpoilersShowsOverviewsNotCollectedDescription">Hide <b>description</b> of shows that are not in your Collection</string>
  <string name="textSettingsSpoilersShowsRatingsNotCollectedDescription">Hide <b>rating</b> of shows that are not in your Collection</string>
  <string name="textSettingsSpoilersMovies">Movies</string>
  <string name="textSettingsSpoilersMoviesSummary">Manage spoiler settings for movies.</string>
  <string name="textSettingsSpoilersMoviesOverviewsMyTitle">History</string>
  <string name="textSettingsSpoilersMoviesOverviewsMyDescription">Hide <b>description</b> of movies added to history</string>
  <string name="textSettingsSpoilersMoviesRatingsMyDescription">Hide <b>rating</b> of movies added to history</string>
  <string name="textSettingsSpoilersMoviesOverviewsWatchlistTitle">Watchlist</string>
  <string name="textSettingsSpoilersMoviesOverviewsWatchlistDescription">Hide <b>description</b> of movies added to Watchlist</string>
  <string name="textSettingsSpoilersMoviesRatingsWatchlistDescription">Hide <b>rating</b> of movies added to Watchlist</string>
  <string name="textSettingsSpoilersMoviesOverviewsHiddenTitle">Hidden</string>
  <string name="textSettingsSpoilersMoviesOverviewsHiddenDescription">Hide <b>description</b> of movies added to Hidden</string>
  <string name="textSettingsSpoilersMoviesRatingsHiddenDescription">Hide <b>rating</b> of movies added to Hidden</string>
  <string name="textSettingsSpoilersMoviesOverviewsNotCollectedTitle">Not Collected</string>
  <string name="textSettingsSpoilersMoviesOverviewsNotCollectedDescription">Hide <b>description</b> of movies that are not in your Collection</string>
  <string name="textSettingsSpoilersMoviesRatingsNotCollectedDescription">Hide <b>rating</b> of movies that are not in your Collection</string>
  <string name="textSettingsSpoilersEpisodes">Episodes</string>
  <string name="textSettingsSpoilersEpisodesSummary">Manage spoiler settings for episodes.</string>
  <string name="textSettingsSpoilersEpisodesImage">Hide <b>image</b> of unwatched episodes.</string>
  <string name="textSettingsSpoilersEpisodesTitle">Hide <b>title</b> of unwatched episodes.</string>
  <string name="textSettingsSpoilersEpisodesDescription">Hide <b>description</b> of unwatched episodes.</string>
  <string name="textSettingsSpoilersEpisodesRating">Hide <b>rating</b> of unwatched episodes.</string>
  <string name="textSettingsSpoilersTapToRevealTitle">Tap To Reveal</string>
  <string name="textSettingsSpoilersTapToRevealDescription">Tap hidden content to temporarily reveal it.</string>
  <string name="textNextEpisodeLastWatched">Last watched episode</string>
  <string name="textNextEpisodeOldest">Oldest unwatched episode</string>
  <string name="textDateSelectionAsk">Always ask</string>
  <string name="textDateSelectionNow">Always \"Now\"</string>
  <string name="textLanguageEnglish" translatable="false">English</string>
  <string name="textLanguagePolish" translatable="false">Polski</string>
  <string name="textLanguageRomanian" translatable="false">Română</string>
  <string name="textLanguageArabic" translatable="false">العربية</string>
  <string name="textLanguageChinese" translatable="false">中文简体</string>
  <string name="textLanguageSpanish" translatable="false">Español</string>
  <string name="textLanguageItalian" translatable="false">Italiano</string>
  <string name="textLanguageFrench" translatable="false">Français</string>
  <string name="textLanguageDanish" translatable="false">Dansk</string>
  <string name="textLanguagePortugalBrasil" translatable="false">Português brasileiro</string>
  <string name="textLanguageTurkish" translatable="false">Türkçe</string>
  <string name="textLanguageUkrainian" translatable="false">Українська</string>
  <string name="textLanguageGerman" translatable="false">Deutsch</string>
  <string name="textLanguageRussian" translatable="false">Pусский</string>
  <string name="textLanguageFinnish" translatable="false">Suomi</string>
  <string name="textThemeSystem">Follow system</string>
  <string name="textThemeLight">Light</string>
  <string name="textThemeDark">Dark</string>
  <string name="textThemeMaterialYou">Material You</string>
  <string name="textThemeMaterialYouLight">Material You Light</string>
  <string name="textThemeMaterialYouDark">Material You Dark</string>
  <string name="textSettingsAmoledTitle">Pure black (AMOLED)</string>
  <string name="textSettingsAmoledSummary">Use pure black backgrounds when the app is dark.</string>
  <string name="textSettingsApiKeys">API keys</string>
  <string name="textSettingsApiKeyNotSet">Not set</string>
  <string name="textSettingsApiKeyHint">Paste your key</string>
  <string name="textSettingsTmdbApiKeyTitle">TMDB API key</string>
  <string name="textSettingsTmdbApiKeyDescription">Required. Provides all show and movie data.</string>
  <string name="textSettingsTmdbApiKeyDialogMessage">Create a free account at themoviedb.org/settings/api, then copy the API key (v3 auth) from Settings → API.</string>
  <string name="textSettingsOmdbApiKeyTitle">OMDb API key</string>
  <string name="textSettingsOmdbApiKeyDescription">Optional. Adds IMDb ratings.</string>
  <string name="textSettingsOmdbApiKeyDialogMessage">Request a free key at omdbapi.com/apikey.aspx and activate it from the confirmation email. Without it, IMDb ratings are simply hidden.</string>
  <string name="textSettingsTmdbDisclaimer">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
  <string name="textSettingsWebDavTitle">WebDAV server</string>
  <string name="textSettingsWebDavDescription">Back your collection up to a server you control.</string>
  <string name="textSettingsWebDavNotConfigured">Not configured</string>
  <string name="textSettingsWebDavDialogMessage">Enter the address of the folder backups should go into, and the credentials for it.</string>
  <string name="textSettingsWebDavUrlHint">Folder URL</string>
  <string name="textSettingsWebDavUsernameHint">Username</string>
  <string name="textSettingsWebDavPasswordHint">Password</string>
  <string name="textSettingsWebDavPasswordSetHint">Password (leave blank to keep current)</string>
  <string name="textSettingsWebDavTest">Test connection</string>
  <string name="textSettingsWebDavTesting">Testing…</string>
  <string name="textSettingsWebDavConnected">Connected. The folder is reachable and writable.</string>
  <string name="textSettingsBackupTargetTitle">Backup destination</string>
  <string name="textSettingsBackupTargetDescription">Where scheduled backups are written.</string>
  <string name="textSettingsBackupTargetLocal">Local folder</string>
  <string name="textSettingsBackupTargetWebDav">WebDAV server</string>
  <string name="textSettingsBackupRetentionTitle">Backups to keep</string>
</resources>