<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/settingsContent"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:theme="@style/AppTheme"
>

  <TextView
    android:id="@+id/settingsCategoryApiKeysLabel"
    style="@style/Settings.Category"
    android:text="@string/textSettingsApiKeys"
    app:layout_constraintBottom_toTopOf="@id/settingsTmdbApiKey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
  />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsTmdbApiKey"
    style="@style/Settings.ItemLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/settingsCategoryApiKeysLabel"
  >

    <TextView
      android:id="@+id/settingsTmdbApiKeyTitle"
      style="@style/Settings.Title"
      android:text="@string/textSettingsTmdbApiKeyTitle"
      app:layout_constraintBottom_toTopOf="@id/settingsTmdbApiKeyDescription"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
    />

    <TextView
      android:id="@+id/settingsTmdbApiKeyDescription"
      style="@style/Settings.Summary"
      android:layout_marginEnd="@dimen/spaceSmall"
      android:text="@string/textSettingsTmdbApiKeyDescription"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsTmdbApiKeyTitle"
    />

    <TextView
      android:id="@+id/settingsTmdbApiKeyValue"
      style="@style/Settings.Summary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="****ce4c"
    />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsOmdbApiKey"
    style="@style/Settings.ItemLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/settingsTmdbApiKey"
  >

    <TextView
      android:id="@+id/settingsOmdbApiKeyTitle"
      style="@style/Settings.Title"
      android:text="@string/textSettingsOmdbApiKeyTitle"
      app:layout_constraintBottom_toTopOf="@id/settingsOmdbApiKeyDescription"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
    />

    <TextView
      android:id="@+id/settingsOmdbApiKeyDescription"
      style="@style/Settings.Summary"
      android:layout_marginEnd="@dimen/spaceSmall"
      android:text="@string/textSettingsOmdbApiKeyDescription"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsOmdbApiKeyTitle"
    />

    <TextView
      android:id="@+id/settingsOmdbApiKeyValue"
      style="@style/Settings.Summary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="****bf7f"
    />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
